?? ??? 2022, PHP 8.0.23

- Core:
  . Fixed incorrect double to long casting in latest clang. (zeriyoshi)

- DBA:
  . Fixed LMDB driver memory leak on DB creation failure (Girgias)
  . Fixed bug GH-9155 (dba_open("non-existing", "c-", "flatfile") segfaults).
    (cmb)

- OPcache:
  . Fixed bug GH-9033 (Loading blacklist file can fail due to negative length).
    (cmb)

- PDO_SQLite:
  . Fixed bug GH-9032 (SQLite3 authorizer crashes on NULL values). (cmb)

- SQLite3:
  . Fixed bug GH-9032 (SQLite3 authorizer crashes on NULL values). (cmb)

- Standard:
  . Fixed bug GH-9017 (php_stream_sock_open_from_socket could return NULL).
    (Heiko Weber)
  . Fixed bug GH-9296 (`ksort` behaves incorrectly on arrays with mixed keys).
    (Denis Vaksman)

- Streams:
  . Fixed bug GH-8472 (The resource returned by stream_socket_accept may have
    incorrect metadata). (Jakub Zelenka)
  . Fixed bug GH-8409 (SSL handshake timeout leaves persistent connections
    hanging). (Jakub Zelenka, Twosee)

04 Aug 2022, PHP 8.0.22

- CLI:
  . Fixed potential overflow for the builtin server via the PHP_CLI_SERVER_WORKERS
    environment variable. (yiyuaner)

- Core:
  . Fixed bug GH-8923 (error_log on Windows can hold the file write lock). (cmb)
  . Fixed bug GH-8995 (WeakMap object reference offset causing TypeError).
    (Tobias Bachert)

- Date:
  . Fixed bug #80047 (DatePeriod doesn't warn with custom DateTimeImmutable).
    (Derick)

- DBA:
  . Fixed LMDB driver hanging when attempting to delete a non-existing key
    (Girgias)

- FPM:
  . Fixed zlog message prepend, free on incorrect address. (Heiko Weber)
  . Fixed possible double free on configuration loading failure. (Heiko Weber).

- GD:
  . Fixed bug GH-8848 (imagecopyresized() error refers to the wrong argument).
    (cmb)

- Intl:
  . Fixed build for ICU 69.x and onwards. (David Carlier)

- OPcache:
  . Fixed bug GH-8847 (PHP hanging infinitly at 100% cpu when check php
    syntaxe of a valid file). (Dmitry)

- Standard: